# idv-client-server

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  nest-cli.json  package.json  pnpm-lock.yaml
java/: Dockerfile  README.md  build.gradle  settings.gradle
kotlin/: .env.example  .gitignore  Dockerfile  README.md  build.gradle.kts  docker-compose.yaml  settings.gradle.kts
python/: Dockerfile  README.md  pyproject.toml
python/app/: __init__.py  config.py  main.py  services.py  state.py
python/tests/: test_main.py  test_services.py
scripts/: copy-openapi-client.mjs
src/: app.controller.ts  app.module.ts  app.service.ts  main.ts  wechat-login.spec.ts  wechat-login.ts  wechat.spec.ts
src/contract/: api.ts
src/messages/: access_token.ts  idv_jp_get_result.ts  idv_jp_start.ts  idv_start.ts  idv_us_get_result.ts  idv_us_start.ts  start.ts  types.ts
src/sdk/: api-contract-old.ts  api-contract.ts  idv-client.integration.spec.ts  idv-client.ts  idv-old-client.ts  index.ts
src/swagger/: client-server.openapi.json  old-api.openapi.json  test-board.html
test-board/: test-board.html
typescript/: Dockerfile  docker-compose.yaml  package.json  pnpm-lock.yaml
typescript/scripts/: copy-openapi-client.mjs
typescript/src/: api-contract.ts  app.controller.spec.ts  app.controller.ts  app.module.ts  app.reset.spec.ts  app.service.spec.ts  app.service.ts  deprecated-implementation.spec.ts  idv-client.integration.spec.ts  main.ts  mock-spec-removal.spec.ts  state.service.ts  swagger-defaults.spec.ts  tomo-idv-node.spec.ts  (+6 more)
(+47 files in other folders)
