[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idv-client-server-python"
version = "0.1.0"
description = "Python BFF implementation for the Tomo IDV client-server sample."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0"
]

[project.optional-dependencies]
test = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.0.0,<9.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
